WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311019
Fix currentScale having no effect on standalone SVG documents
https://bugs.webkit.org/show_bug.cgi?id=311019
Summary
Fix currentScale having no effect on standalone SVG documents
Ahmad Saleem
Reported
2026-03-29 04:04:56 PDT
ssia - fixes WPT
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-29 04:05:03 PDT
<
rdar://problem/173624862
>
Ahmad Saleem
Comment 2
2026-03-29 04:06:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61612
EWS
Comment 3
2026-03-29 12:35:15 PDT
Committed
310183@main
(528584f4a045): <
https://commits.webkit.org/310183@main
> Reviewed commits have been landed. Closing PR #61612 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug