Fix currentScale having no effect on standalone SVG documents https://bugs.webkit.org/show_bug.cgi?id=311019 rdar://173624862

Reviewed by Nikolas Zimmermann.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

frameForCurrentScale() checked parentNode() to prevent currentScale
from applying to SVGs embedded in HTML. However, even the document
element has a non-null parentNode (the Document node), so this
condition prevented currentScale from ever working on any connected
element, including standalone SVG documents.

Replace the parentNode() check with document().documentElement() != this,
which correctly distinguishes standalone SVG (where the <svg> is the
document element) from embedded SVG (where it is not).

* LayoutTests/TestExpectations: Unskip Test (now progressed)
* Source/WebCore/svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::frameForCurrentScale const):

Canonical link: https://commits.webkit.org/310183@main